AM_CFLAGS = -Wall -Werror -ggdb
AM_LDFLAGS = -lpcap

bin_PROGRAMS = ethping ethtrace dot1agd dot1ag_ccd

ethping_SOURCES = \
	ethping.c \
	ieee8021ag.c \
	ieee8021ag.h \
	dot1ag_eth.c \
	dot1ag_eth.h

ethtrace_SOURCES = \
	ethtrace.c \
	ieee8021ag.c \
	ieee8021ag.h \
	dot1ag_eth.c \
	dot1ag_eth.h

dot1agd_SOURCES = \
	dot1agd.c \
	ieee8021ag.c \
	ieee8021ag.h \
	dot1ag_eth.c \
	dot1ag_eth.h

dot1ag_ccd_SOURCES = \
	dot1ag_ccd.c \
	ieee8021ag.c \
	ieee8021ag.h \
	dot1ag_eth.c \
	dot1ag_eth.h
